[project]
name = "flet-webview-all-example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet-webview-all",
    "flet>=0.85.2",
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.2",
    "flet-desktop>=0.85.2",
    "flet-web>=0.85.2",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flet-webview-all-example"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2026 by MyCompany"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-webview-all = "..\.." # relative path

[tool.uv.sources]
flet-webview-all = { path = "..\..\", editable = true }
